--- a/taskmaster/app/src/main/AndroidManifest.xml
+++ b/taskmaster/app/src/main/AndroidManifest.xml
@@ -18,10 +18,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AllTasks"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".AddTask"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".AllTasks"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".AddTask"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".TaskDetail"
+            android:parentActivityName=".MainActivity" />
+
+        <activity
+            android:name=".Settings"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
