--- a/taskmaster/app/build.gradle
+++ b/taskmaster/app/build.gradle
@@ -29,6 +29,23 @@ android {
 }
 
 dependencies {
+    implementation "androidx.room:room-runtime:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
+
+    // optional - RxJava2 support for Room
+    implementation "androidx.room:room-rxjava2:2.3.0"
+
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:2.3.0"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:2.3.0"
+
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:2.3.0"
+
+    // optional - Paging 3 Integration
+    implementation "androidx.room:room-paging:2.4.0-alpha04"
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
